--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "lottie-react-native": "^5.1.4",
     "react": "^18.0.0",
     "react-native": "^0.69.3",
+    "react-native-paper": "^4.12.5",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
