--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@alessiocancian/react-native-actionsheet": "^3.2.0",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.0",
-    "axios": "^1.1.3",
+    "axios": "0.27.2",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "react": "^18.0.0",
     "react-native": "^0.69.3",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^4.12.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -28,8 +31,12 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-redux": "^8.0.5"
+    "react-native-vision-camera": "^2.15.2",
+    "react-redux": "^8.0.5",
+    "vision-camera-code-scanner": "^0.2.0",
+    "vision-camera-dynamsoft-barcode-reader": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
