--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^18.0.0",
     "react-native": "^0.69.3",
     "react-native-axios": "^0.17.1",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.2",
     "react-native-paper": "^4.12.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.13.0",
