--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@alessiocancian/react-native-actionsheet": "^3.2.0",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.0",
-    "axios": "0.27.2",
+    "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "react": "^18.0.0",
