--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.0",
+    "@rneui/base": "^4.0.0-rc.7",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
@@ -29,6 +30,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.2",
     "react-native-paper": "^4.12.5",
+    "react-native-permissions": "^3.6.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-responsive-fontsize": "^0.5.1",
