--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,22 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+signingConfigs {
+    release {
+        if (project.hasProperty('RELEASE_STORE_FILE')) {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+}
+buildTypes {
+    release {
+        signingConfig signingConfigs.release
+    }
+}
+
     defaultConfig {
         applicationId "com.assetskkc"
         minSdkVersion rootProject.ext.minSdkVersion
