--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -240,6 +240,14 @@ buildTypes {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+            release {
+        if (project.hasProperty('RELEASE_STORE_FILE')) {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
     }
     buildTypes {
         debug {
