--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@rneui/base": "^4.0.0-rc.7",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^5.1.4",
+    "lottie-ios": "3.4.1",
+    "lottie-react-native": "5.1.4",
     "react": "^18.0.0",
     "react-native": "^0.69.3",
     "react-native-axios": "^0.17.1",
