--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-ios": "3.4.1",
     "lottie-react-native": "5.1.4",
     "react": "^18.0.0",
+    "react-moment": "^1.1.3",
     "react-native": "^0.69.3",
     "react-native-axios": "^0.17.1",
     "react-native-dropdown-picker": "^5.4.3",
