--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-dropdown-picker": "^5.4.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.2",
+    "react-native-image-slider-banner": "^1.0.3",
     "react-native-paper": "^4.12.5",
     "react-native-permissions": "^3.6.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
